<resources>
    <string name="app_name">SwopZone</string>
    <string name="heading_SwopZone">SwopZone</string>
    <string name="subheading_signIn">Sign-in</string>
    <string name="subheading_join">Join</string>
    <string name="subheading_search">Search</string>
    <string name="subheading_membermainmenu">Member Main Menu</string>
    <string name="subheading_SwopItem">Swop Item</string>
    <string name="subheading_makeanoffer">Make An Offer</string>
    <string name="subheading_process_offer_outgoing">Process Outgoing Offer</string>
    <string name="subheading_process_offer_incoming">Process Incoming Offer</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_retype_password">Retype Password</string>
    <string name="hint_location">Location</string>
    <string name="hint_location_lat">Location Latitute</string>
    <string name="hint_location_lng">Location Longitute</string>
    <string name="hint_location_zoom">Location Zoom</string>
    <string name="hint_meeting_time_date">Meeting Time/Date</string>
    <string name="hint_telephone">Telephone Number</string>
    <string name="hint_swopItemName">Swop Item Name</string>
    <string name="hint_swopItemCategory">Swop Item Category</string>
    <string name="hint_swopItemPrice">Swop Item Price</string>
    <string name="hint_swopItemState">Swop Item State</string>
    <string name="hint_swopItemOwner">Swop Item Owner</string>
    <string name="hint_swopItemImage">Swop Item Image</string>
    <string name="hint_searchItem">Search</string>
    <string name="hint_offer_status">Offer Status</string>
    <string name="hint_swopGiveItemName">Name of Swop Item To Give</string>
    <string name="hint_swopGiveItemCategory">Category of Swop Item To Give</string>
    <string name="hint_swopReceiveItemName">Name of Swop Item To Receive</string>
    <string name="hint_swopReceiveItemCategory">Category of Swop Item To Receive</string>
    <string name="swopitem_image">Swop Item Image</string>
    <string name="select_swopitem_image">Select swop item image</string>
    <string name="button_signIn">Sign In</string>
    <string name="button_join">Join</string>
    <string name="button_allItemList">All Item List</string>
    <string name="button_searchForItem">Search For Item</string>
    <string name="button_search">Search</string>
    <string name="button_myItems">My Items</string>
    <string name="button_add">Add Item</string>
    <string name="button_image">Add Image</string>
    <string name="button_makeAnOffer">Make An Offer</string>
    <string name="button_selectitemtogive">Select Swop Item To Give</string>
    <string name="button_selectitemtoreceive">Select Swop Item To Receive</string>
    <string name="button_outgoingoffers">My Swop Offers</string>
    <string name="button_incomingoffers">Incoming Swop Offers</string>
    <string name="button_submitOffer">Submit Offer</string>
    <string name="button_location">Location</string>
    <string name="button_acceptOffer">Accept Offer</string>
    <string name="button_declineOffer">Decline Offer</string>
    <string name="button_acknowledge">Acknowledge</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_cancel">Cancel</string>
    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_signout">Sign Out</string>
    <string name="radio_category">Category</string>
    <string name="radio_name">Name</string>
    <string name="subheading_membername">Member Name: </string>
    <string name="textview_searchword">Search word: </string>
    <string name="textview_outgoing_offer_to_give">Outgoing offer to give: </string>
    <string name="textview_outgoing_offer_to_receive">To receive:</string>
    <string name="textview_incoming_offer_for">Incoming offer for your: </string>
    <string name="textview_incoming_offer_in_exchange_for">In exchange for their: </string>
    <string name="textview_swop_location">Swop Location</string>
    <string name="textview_meeting_time_date">Meeting Time/Date</string>
    <string name="textview_offer_state">Offer Status</string>
    <string name="text_meetingtime">MEETING TIME/DATE</string>
    <string name="textAccept">Accept</string>
    <string name="textDecline">Decline</string>
    <string name="userName">Username</string>
</resources>